Fixed preview overflows

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12548,6 +12548,8 @@ div#video-preview-container {
 
 div#preview-player {
   width: 100%;
+  height: 100%;
+  overflow: hidden;
   background: transparent !important; }
 
 video#preview-player_html5_api {
@@ -12557,7 +12559,7 @@ canvas#output-preview {
   width: 140%;
   margin-top: 17px;
   position: relative;
-  bottom: 61px;
+  bottom: -2px;
   left: -20%; }
 
 div#premade-preview-container {
